# SolArena

./: .gitignore  Anchor.toml  README.md  README_SOLANA_SETUP.md  eslint.config.mjs  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/championship/: page.tsx
app/dashboard/: page.tsx
app/favicon.ico/: route.ts
app/leaderboards/: page.tsx
app/mission/: page.tsx
app/teams/: page.tsx
app/tournaments/: arena-wager-section.tsx  page.tsx
components/: footer.tsx  navigation.tsx  profile-dropdown.tsx  profile-signup-modal.tsx  token-chart.tsx  video-background.tsx  wallet-provider.tsx
docs/: METEORA_FUN_LAUNCH.md  SETUP_RPC.md  STREAMFLOW_STAKING_SETUP.md  TEAM_CREATION_FIX.md
lib/: arena-token.ts  create-spl-token.ts  dbc-config.ts  meteora-dbc.ts  solana-program.ts
programs/sol-arena/: Cargo.toml
programs/sol-arena/src/: lib.rs
scripts/: 001_create_championship_registrations.sql  002_create_player_profiles.sql  003_create_tournament_participations.sql  004_create_teams_tables.sql  005_add_tournaments_table.sql  006_add_admin_audit_log.sql  007_upgrade_teams_for_tokens.sql  008_upgrade_staking_table.sql  009_add_admin_roles.sql  010_add_dbc_config_default.sql  011_create_team_assets_storage.sql  012_make_team_mint_nullable.sql  013_add_pool_address_to_teams.sql  014_fix_tournament_rls_policies.sql  015_add_tournament_banner_url.sql  015_clear_invalid_pool_address.sql  016_create_arena_wager_tournaments.sql  deploy-solana.ps1  deploy-solana.sh  setup-solana-tools.ps1  setup-solana-tools.sh
styles/: globals.css
(+28 files in other folders)
